--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,9 @@ include = [
     "src/**/*",
 ]
 
+[badges]
+travis-ci = { repository = "encabulators/machinebox", branch = "master" }
+
 [dependencies]
 reqwest = "0.8.4"
 serde_json = "1.0"
